test/scc/lex/errors/config.py
def run(test):
	presets.lex_errors(test)